--- a/yanki_etl.ipynb
+++ b/yanki_etl.ipynb
@@ -1051,11 +1051,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Loading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: psycopg2 in c:\\users\\user\\anaconda3\\lib\\site-packages (2.9.9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_db_connection():\n",
+    "    Connection = psycopg2.connect(\n",
+    "        host = 'localhost',\n",
+    "        datebase = 'yanki_ecommerce',\n",
+    "        user = 'postgres',\n",
+    "        password = 'password'\n",
+    "     )\n",
+    "    return Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = get_db_connection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create our SQL tables\n",
+    "\n",
+    "def create_table():\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    create_table_query = ''' \n",
+    "                            CREATE SCHEMA IF NOT EXIST yanki;\n",
+    "\n",
+    "                            DROP TABLE IF EXISTS yanki.customers CASCADE;\n",
+    "                            DROP TABLE IF EXISTS yanki.products CASCADE;\n",
+    "                            DROP TABLE IF EXISTS yanki.shipping_address CASCADE;\n",
+    "                            DROP TABLE IF EXISTS yanki.orders CASCADE;\n",
+    "                            DROP TABLE IF EXISTS yanki.payment_method CASCADE;\n",
+    "\n",
+    "                            CREATE TABLE IF NOT EXISTS yanki.customers (\n",
+    "                            Customer_ID UUID PRIMARY KEY, \n",
+    "                            Customer_Name TEXT,\n",
+    "                            Email TEXT, \n",
+    "                            Phone_Number TEXT\n",
+    "                            );\n",
+    "\n",
+    "                           CREATE TABLE IF NOT EXISTS yanki.products  (\n",
+    "                            Product_ID UUID PRIMARY KEY, \n",
+    "                            Product_Name TEXT, \n",
+    "                            Brand TEXT, \n",
+    "                            Category TEXT, \n",
+    "                            Price FLOAT\n",
+    "                            );\n",
+    "\n",
+    "                            CREATE TABLE IF NOT EXISTS yanki.shipping_address(\n",
+    "                            shipping_ID SERIAL PRIMARY KEY,\n",
+    "                            Customer_ID UUID,\n",
+    "                            City TEXT, \n",
+    "                            State TEXT,\n",
+    "                            Country TEXT,\n",
+    "                            Postal_Code INTEGER,\n",
+    "                            FOREIGN KEY (Customer_ID) REFERENCES yanki.customers(Customer_ID)\n",
+    "                            );\n",
+    "\n",
+    "                            CREATE TABLE IF NOT EXISTS yanki.orders (\n",
+    "                            Order_ID UUID PRIMARY KEY,\n",
+    "                            Customer_ID UUID,\n",
+    "                            Product_ID UUID\n",
+    "                            Quantity INTEGER, \n",
+    "                            Total_Price TEXT,\n",
+    "                            Country FLOAT,\n",
+    "                            Order_Date DATETIME \n",
+    "                            FOREIGN KEY (Customer_ID) REFERENCES yanki.customers(Customer_ID)\n",
+    "                             FOREIGN KEY (Product_ID) REFERENCES yanki.Products(Product _ID)\n",
+    "                            );\n",
+    "\n",
+    "                            CREATE TABLE IF NOT EXISTS yanki.payment_method (\n",
+    "                            Order_ID UUID,\n",
+    "                            Payment_method TEXT,\n",
+    "                            Transaction_Status TEXT, \n",
+    "                            FOREIGN KEY (Order_ID) REFERENCES yanki.orders (Order_ID)\n",
+    "                            );'''\n",
+    "    cursor.execute(create_table_query)\n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'create_tables' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m create_tables()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'create_tables' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "create_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'create_tables' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m create_tables\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'create_tables' is not defined"
+     ]
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['shipping_ID', 'Customer_ID', 'Shipping_Address', 'City', 'State',\n",
+       "       'Country', 'Postal_Code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 990 entries, 0 to 989\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   shipping_ID       990 non-null    int64 \n",
+      " 1   Customer_ID       990 non-null    object\n",
+      " 2   Shipping_Address  990 non-null    object\n",
+      " 3   City              990 non-null    object\n",
+      " 4   State             990 non-null    object\n",
+      " 5   Country           990 non-null    object\n",
+      " 6   Postal_Code       990 non-null    int64 \n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 54.3+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(shipping_address_df.columns)\n",
+    "display(shipping_address_df.info())"
+   ]
   }
  ],
  "metadata": {
