--- a/yanki_etl.ipynb
+++ b/yanki_etl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "4       292.840.0975x724         PayPal            pending  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "4     derek85@example.com           3424148376  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "4  Riddle, Alvarez and Robinson      perfume  704.05  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "4  Mississippi                           Croatia        45429  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "4 2021-08-20 18:02:04.254156  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "4  41c29d81-9622-43c1-b537-7cdb320d3e6a         PayPal            pending"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,23 +1085,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_db_connection():\n",
     "    Connection = psycopg2.connect(\n",
     "        host = 'localhost',\n",
-    "        datebase = 'yanki_ecommerce',\n",
+    "        database = 'yanki_ecommerce',\n",
     "        user = 'postgres',\n",
-    "        password = 'password'\n",
+    "        password = 'Aveb6740'\n",
     "     )\n",
     "    return Connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
     "    conn = get_db_connection()\n",
     "    cursor = conn.cursor()\n",
     "    create_table_query = ''' \n",
-    "                            CREATE SCHEMA IF NOT EXIST yanki;\n",
+    "                            CREATE SCHEMA IF NOT EXISTS yanki;\n",
     "\n",
     "                            DROP TABLE IF EXISTS yanki.customers CASCADE;\n",
     "                            DROP TABLE IF EXISTS yanki.products CASCADE;\n",
@@ -1156,13 +1156,13 @@
     "                            CREATE TABLE IF NOT EXISTS yanki.orders (\n",
     "                            Order_ID UUID PRIMARY KEY,\n",
     "                            Customer_ID UUID,\n",
-    "                            Product_ID UUID\n",
+    "                            Product_ID UUID,\n",
     "                            Quantity INTEGER, \n",
     "                            Total_Price TEXT,\n",
     "                            Country FLOAT,\n",
-    "                            Order_Date DATETIME \n",
-    "                            FOREIGN KEY (Customer_ID) REFERENCES yanki.customers(Customer_ID)\n",
-    "                             FOREIGN KEY (Product_ID) REFERENCES yanki.Products(Product _ID)\n",
+    "                            Order_Date DATE, \n",
+    "                            FOREIGN KEY (Customer_ID) REFERENCES yanki.customers(Customer_ID),\n",
+    "                            FOREIGN KEY (Product_ID) REFERENCES yanki.Products(Product_ID)\n",
     "                            );\n",
     "\n",
     "                            CREATE TABLE IF NOT EXISTS yanki.payment_method (\n",
@@ -1179,47 +1179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'create_tables' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m create_tables()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'create_tables' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "create_tables()"
+    "create_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'create_tables' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m create_tables\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'create_tables' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1266,6 +1235,236 @@
    "source": [
     "display(shipping_address_df.columns)\n",
     "display(shipping_address_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Loading DATA\n",
+    "\n",
+    "import csv\n",
+    "def load_data_from_csv(csv_path):\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    with open(csv_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)\n",
+    "        for row in reader:\n",
+    "            cursor.execute(''' \n",
+    "                        INSERT INTO yanki.customers(Customer_ID, Customer_Name, Email, Phone_Number)\n",
+    "                       VALUES(%s, %s, %s, %s);''',\n",
+    "                       row\n",
+    "                    ) \n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "csv_file_path = r'dataset2\\rawdata\\cleaneddata\\customers.csv'\n",
+    "\n",
+    "\n",
+    "load_data_from_csv(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading product data\n",
+    "def load_data_from_csv(csv_path):\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    with open(csv_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)\n",
+    "        for row in reader:\n",
+    "            cursor.execute(''' \n",
+    "                        INSERT INTO yanki.products(Product_ID, Product_Name, Brand, Category, Price)\n",
+    "                       VALUES(%s, %s, %s, %s, %s);''',\n",
+    "                       row\n",
+    "                    ) \n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "csv_file_path = r'dataset2\\rawdata\\cleaneddata\\products.csv'\n",
+    "\n",
+    "\n",
+    "load_data_from_csv(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Product_ID', 'Product_Name', 'Brand', 'Category', 'Price'], dtype='object')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_from_csv(csv_path):\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    with open(csv_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)\n",
+    "        for row in reader:\n",
+    "            cursor.execute(''' \n",
+    "                        INSERT INTO yanki.shipping_address(shipping_ID, Customer_ID,Shipping_Address City, State,\n",
+    "       Country, Postal_Code)\n",
+    "                       VALUES(%s, %s, %s, %s, %s, %s, %s);''',\n",
+    "                       row\n",
+    "                    ) \n",
+    "    conn.commit()\n",
+    "    cursor.close()    \n",
+    "    conn.close()\n",
+    "\n",
+    "csv_file_path = r'dataset2\\rawdata\\cleaneddata\\shipping_address.csv'\n",
+    "\n",
+    "\n",
+    "load_data_from_csv(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['shipping_ID', 'Customer_ID', 'Shipping_Address', 'City', 'State',\n",
+       "       'Country', 'Postal_Code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shipping_address_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_from_csv(csv_path):\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    with open(csv_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)\n",
+    "        for row in reader:\n",
+    "            cursor.execute(''' \n",
+    "                        INSERT INTO yanki.orders(Order_ID, Customer_ID, Product_ID, Quantity, Total_Price,\n",
+    "       Order_Date)\n",
+    "                       VALUES(%s, %s, %s, %s, %s, %s);''',\n",
+    "                       row\n",
+    "                    ) \n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "csv_file_path = r'dataset2\\rawdata\\cleaneddata\\orders.csv'\n",
+    "\n",
+    "\n",
+    "load_data_from_csv(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Order_ID', 'Customer_ID', 'Product_ID', 'Quantity', 'Total_Price',\n",
+       "       'Order_Date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_from_csv(csv_path):\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    with open(csv_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)\n",
+    "        for row in reader:\n",
+    "            cursor.execute(''' \n",
+    "                        INSERT INTO yanki.payment_method(Order_ID, Payment_Method, Transaction_Status)\n",
+    "                       VALUES(%s, %s, %s);''',\n",
+    "                       row\n",
+    "                    ) \n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "csv_file_path = r'dataset2\\rawdata\\cleaneddata\\payment_method.csv'\n",
+    "\n",
+    "\n",
+    "load_data_from_csv(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Order_ID', 'Payment_Method', 'Transaction_Status'], dtype='object')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "payment_method_df.columns"
    ]
   }
  ],
